--- a/fieldset.html
+++ b/fieldset.html
@@ -2,28 +2,16 @@
 <html lang="en">
 
 <head>
-    <title>'Cookie Stand'</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>Document</title>
 </head>
 
 <body>
-    <h1>Pat's Salmon Cookies: Sales Data</h1>
-    <h2>Seattle</h2>
-    <ul id='seattle'></ul>
-    <h2>Tokyo</h2>
-    <ul id='tokyo'></ul>
-    <h2>Dubai</h2>
-    <ul id='dubai'></ul>
-    <h2>Paris</h2>
-    <ul id='paris'></ul>
-    <h2>Lima</h2>
-    <ul id='lima'></ul>
     <article>
-        <!-- <h2>
-            <p id="cookies-stand">
+        <h2>
+            <p>
             <ul>
                 <li></li>
             </ul>
@@ -65,9 +53,8 @@
                 </tr>
             </table>
             </p>
-        </h2> -->
+        </h2>
     </article>
-    <script src="apps.js" type="text/javascript"></script>
 </body>
 
 </html>
