final codes solution

--- a/index.html
+++ b/index.html
@@ -22,50 +22,34 @@
     <h2>Lima</h2>
     <ul id='lima'></ul>
     <article>
-        <!-- <h2>
+        <h2>
             <p id="cookies-stand">
             <ul>
                 <li></li>
             </ul>
             <table>
                 <tr>
-                    <th>
-                        Minimum Customers
-
-                    </th>
-                    <th>
-                        Maximum Customers
-                    </th>
-                    <th>
-                        Average Cookies
-                    </th>
-                    <th>
-                        Cookies Each Hour
-                    </th>
-                    <th>
-                        Total Cookies
-                    </th>
+                    <td>Seattle</td>
                 </tr>
                 <tr>
-                    <td>
-                        8
-                    </td>
-                    <td>
-                        24
-                    </td>
-                    <td>
-                        12
-                    </td>
-                    <td>
-                        48
-                    </td>
-                    <td>
-                        306
-                    </td>
+                    <td>Tokyo</td>
+                </tr>
+                <tr>
+                    <td>Dubai</td>
+                </tr>
+                <tr>
+                    <td>Paris</td>
+                <tr>
+                    <td>Lima</td>
+                <tr>
+                    <td>Totals</td>
+                </tr>
+                <tr>
+
                 </tr>
             </table>
             </p>
-        </h2> -->
+        </h2>
     </article>
     <script src="apps.js" type="text/javascript"></script>
 </body>
