added borders and padding to fieldset html

--- a/fieldset.html
+++ b/fieldset.html
@@ -2,59 +2,102 @@
 <html lang="en">
 
 <head>
+    <style>
+        table,
+        th,
+        td,
+        tr {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+
+        th,
+        td {
+            padding: 6px;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src=apps.js></script>
 </head>
 
 <body>
-    <article>
-        <h2>
-            <p>
-            <ul>
-                <li></li>
-            </ul>
-            <table>
-                <tr>
-                    <th>
-                        Minimum Customers
+    <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="">
+    <table style="width: 100;">
+        <tr>
+            <th>
 
-                    </th>
-                    <th>
-                        Maximum Customers
-                    </th>
-                    <th>
-                        Average Cookies
-                    </th>
-                    <th>
-                        Cookies Each Hour
-                    </th>
-                    <th>
-                        Total Cookies
-                    </th>
-                </tr>
-                <tr>
-                    <td>
-                        8
-                    </td>
-                    <td>
-                        24
-                    </td>
-                    <td>
-                        12
-                    </td>
-                    <td>
-                        48
-                    </td>
-                    <td>
-                        306
-                    </td>
-                </tr>
-            </table>
-            </p>
-        </h2>
-    </article>
+            </th>
+            <th>
+                6am
+            </th>
+            <th>
+                7am
+            </th>
+            <th>
+                8am
+            </th>
+            <th>
+                8am
+            </th>
+            <th>
+                9am
+            </th>
+            <th>
+                10am
+            </th>
+            <th>
+                11am
+            </th>
+            <th>
+                12pm
+            </th>
+            <th>
+                1pm
+            </th>
+            <th>
+                2pm
+            </th>
+            <th>
+                3pm
+            </th>
+            <th>
+                4pm
+            </th>
+            <th>
+                5pm
+            </th>
+            <th>
+                6pm
+            </th>
+            <th>
+                7pm
+            </th>
+            <th>
+                Total
+            </th>
+        </tr>
+        <tr>
+            <td>Seattle</td>
+        </tr>
+        <tr>
+            <td>Tokyo</td>
+        </tr>
+        <td>Dubai</td>
+        <tr>
+            <td>Paris</td>
+        </tr>
+        <tr>
+            <td>Lima</td>
+        </tr>
+        <tr>
+            <td>Totals</td>
+        </tr>
+
+
+    </table>
 </body>
 
 </html>
