--- a/index.html
+++ b/index.html
@@ -2,31 +2,150 @@
 <html lang="en">
 
 <head>
-    <title>'Cookie Stand'</title>
+    <title>Cookie Stand</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-</head>
+    <script src="apps.js" type="text/javascript"></script>
+</head> -->
 
 <body>
     <h1>Pat's Salmon Cookies: Sales Data</h1>
-    <h2>Seattle</h2>
+    <h2>
+        <article>
+            <p id='cookies-stand'>
+            <table>
+                <tr>
+                    <td>
+                        6am
+                    </td>
+                    <td>
+                        7am
+                    </td>
+                    <td>
+                        8am
+                    </td>
+                    <td>
+                        9am
+                    </td>
+                    <td>
+                        10am
+                    </td>
+                    <td>
+                        11am
+                    </td>
+                    <td>
+                        12pm
+                    </td>
+                    <td>
+                        1pm
+                    </td>
+                    <td>
+                        2pm
+                    </td>
+                    <td>
+                        3pm
+                    </td>
+                    <td>
+                        4pm
+                    </td>
+                    <td>
+                        5pm
+                    </td>
+                    <td>
+                        6am
+                    </td>
+                    <td>
+                        7pm
+                    </td>
+                    <td>
+                        Total
+                    </td>
+                </tr>
+            </table>
+            </p>
+        </article>
+    </h2>
+    <h1>
+        Location
+        <td>
+            Min/Cust
+        </td>
+        <td>
+            Max/Cust
+        </td>
+        <td>
+            Avg Sales
+        </td>
+    </h1>
+    <h2>
+        Seattle
+        <td>
+            23
+        </td>
+        <td>
+            65
+        </td>
+        <td>
+            6.3
+        </td>
+    </h2>
     <ul id='seattle'></ul>
-    <h2>Tokyo</h2>
+    <h2>
+        Tokyo
+        <td>
+            3
+        </td>
+        <td>
+            24
+        </td>
+        <td>
+            1.2
+        </td>
+    </h2>
     <ul id='tokyo'></ul>
-    <h2>Dubai</h2>
+    <h2>
+        Dubai
+        <td>
+            11
+        </td>
+        <td>
+            38
+        </td>
+        <td>
+            3.7
+        </td>
+    </h2>
     <ul id='dubai'></ul>
-    <h2>Paris</h2>
+    <h2>
+        Paris
+        <td>
+            20
+        </td>
+        <td>
+            38
+        </td>
+        <td>
+            2.3
+        </td>
+    </h2>
     <ul id='paris'></ul>
-    <h2>Lima</h2>
+    <h2>
+        Lima
+        <td>
+            2
+        </td>
+        <td>
+            16
+        </td>
+        <td>
+            4.6
+        </td>
+    </h2>
     <ul id='lima'></ul>
     <article>
         <h2>
             <p id="cookies-stand">
-            <ul>
-                <li></li>
-            </ul>
             <table>
                 <tr>
                     <td>Seattle</td>
@@ -51,7 +170,6 @@
             </p>
         </h2>
     </article>
-    <script src="apps.js" type="text/javascript"></script>
 </body>
 
 </html>
